--- a/src/stylesheets/home/__banner.scss
+++ b/src/stylesheets/home/__banner.scss
@@ -6,9 +6,7 @@
     align-items: center;
     justify-content: space-evenly;
     padding: 8rem 0 2rem 2rem;
-    position: absolute;
-    z-index: -1;
-    top: 0;
+    margin: 0 !important;
     width: 100%;
     .banner__container{
         display: flex;
