--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -4,4 +4,5 @@
 
 // 
 @import "./home/__navbar.scss";
-@import "./home/_banner";
+@import "./home/__banner.scss";
+@import "./home/__services.scss";
