partners section done

--- a/src/stylesheets/home/__banner.scss
+++ b/src/stylesheets/home/__banner.scss
@@ -16,7 +16,8 @@
         color: white;
         .banner__text{
             h1, p{
-                margin: 1.3rem 0;
+                margin: 2rem 0;
+                font-weight: 400;
             }
         }
         .banner__form{
