--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -6,3 +6,4 @@
 @import "./home/__navbar.scss";
 @import "./home/__banner.scss";
 @import "./home/__services.scss";
+@import "./home/__partners.scss";  
