--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -19,3 +19,11 @@ img{
 section{
     margin: 3rem 0 !important; 
 }
+
+h1, h2, h3, h4, h5, h6{
+    font-family: $header-font;  
+}
+
+p, a{
+    font-family: $para-font;
+}
