--- a/src/stylesheets/home/__services.scss
+++ b/src/stylesheets/home/__services.scss
@@ -3,6 +3,8 @@
         h1{
             text-align: center;
             margin-top: 6rem;
+            color: $text-color;
+            padding: 0;
         }
        .services__main__container{
         display: flex;
@@ -16,9 +18,11 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            color: $text-color;
             h4{
                 text-align: center;
                 margin: 3rem 0 1rem 0;
+                font-weight: 600;
             } 
             p{
                 text-align: center;
@@ -40,6 +44,9 @@
 @include respond(largeScreen){
     .services{
         .services__container{
+            h1{
+                padding: 0 8rem !important;
+            }
             .services__main__container{
                 flex-direction: row !important;
             }
