--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,1 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
+
 $main-purple-button: #9A52DF;
+$header-font: 'Libre Baskerville', serif;
+$para-font: 'Source Sans Pro', sans-serif;
+$text-color: #3f3f3f;
