grid component added and photos added

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -7,3 +7,5 @@
 @import "./home/__banner.scss";
 @import "./home/__services.scss";
 @import "./home/__partners.scss";  
+@import "./home/__footer.scss";  
+@import "./home/__photogrid.scss";  
