--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -24,6 +24,14 @@ h1, h2, h3, h4, h5, h6{
     font-family: $header-font;  
 }
 
+h1{
+    font-size: 2rem;
+}
+
 p, a{
     font-family: $para-font;
+}
+
+li{
+    list-style: none;
 }
