--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&display=swap');
 
 $main-purple-button: #9A52DF;
-$header-font: 'Libre Baskerville', serif;
-$para-font: 'Source Sans Pro', sans-serif;
+$header-font: 'Catamaran', sans-serif;
+$para-font: 'Merriweather Sans', sans-serif;
 $text-color: #3f3f3f;
