added animation to banner

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -9,3 +9,4 @@
 @import "./home/__partners.scss";  
 @import "./home/__footer.scss";  
 @import "./home/__photogrid.scss";  
+@import "./home/_description.scss";  
