--- a/src/stylesheets/home/__footer.scss
+++ b/src/stylesheets/home/__footer.scss
@@ -1,5 +1,5 @@
 .footer{
-    background: url("../../assets/footer-bg.svg") no-repeat;
+    background: url("../../assets/footer-bg.svg") no-repeat top center/cover;
     background-size: cover;
     margin: 3rem 0 0 0 !important;
     .footer__container{
@@ -8,16 +8,23 @@
         align-items: center;
         flex-direction: column;
         .first__section{
+            position: relative;
             display: flex;
             justify-content: space-evenly;
             align-items: flex-end;
+            margin-top: 10rem;
+            margin-bottom: 10rem;
             .footer__image{
+                position: absolute;
+                left: 12px;
+                top: -290px;
                 img{
                     width: 80%;
                 }
             }
             .footer__text{
-                padding: 0 4rem;      
+                padding: 0 4rem;
+                margin-left: 17rem;      
                 h1{
                     color: #5537D3;
                     span{
