added margin to some sections

--- a/src/stylesheets/home/__photogrid.scss
+++ b/src/stylesheets/home/__photogrid.scss
@@ -1,4 +1,6 @@
 .photo__grid{
+   margin-top: 10rem !important;
+   margin-bottom: 10rem !important;
     .photo__grid__container{
         .photo__grid__system{
             display: grid;
