--- a/src/stylesheets/home/__footer.scss
+++ b/src/stylesheets/home/__footer.scss
@@ -1,5 +1,6 @@
 .footer{
-    background: url("../../assets/footer-bg.svg") no-repeat top center/cover;
+   
+    background: rgba(85, 55, 211, 0.21);
     background-size: cover;
     margin: 3rem 0 0 0 !important;
     .footer__container{
@@ -10,21 +11,17 @@
         .first__section{
             position: relative;
             display: flex;
-            justify-content: space-evenly;
-            align-items: flex-end;
-            margin-top: 10rem;
-            margin-bottom: 10rem;
+            flex-direction: column;
             .footer__image{
                 position: absolute;
-                left: 12px;
+                left: 225px;
                 top: -290px;
                 img{
                     width: 80%;
                 }
             }
             .footer__text{
-                padding: 0 4rem;
-                margin-left: 17rem;      
+                   margin: 0; 
                 h1{
                     color: #5537D3;
                     span{
@@ -34,6 +31,8 @@
 
             }
         .footer__appstore__logo{
+            display: flex;
+            flex-direction: column;
             .appstore{
                 width: 150px;
                 margin-top: 1rem;
@@ -66,5 +65,31 @@
             }
         }
 
+    }
+}
+
+@include respond(largeScreen){
+    .footer{
+        background: url("../../assets/footer-bg.svg") no-repeat top center/cover;
+        .footer__container{
+            .first__section{
+                justify-content: space-evenly;
+                align-items: flex-end;
+                margin-top: 10rem;
+                margin-bottom: 10rem;
+                .footer__image{
+                    position: absolute;
+                    left: 12px;
+                    top: -290px;
+                }
+                .footer__text{
+                    padding: 0 4rem;
+                    margin-left: 17rem;  
+                }
+                .footer__appstore__logo{
+                    flex-direction: row;
+                }
+            }
+        }
     }
 }
