--- a/src/stylesheets/home/__footer.scss
+++ b/src/stylesheets/home/__footer.scss
@@ -1,7 +1,6 @@
 .footer{
-   
+    padding: 0 4rem;
     background: rgba(85, 55, 211, 0.21);
-    background-size: cover;
     margin: 3rem 0 0 0 !important;
     .footer__container{
         display: flex;
@@ -12,16 +11,20 @@
             position: relative;
             display: flex;
             flex-direction: column;
+            margin-bottom: 5rem;
+            justify-content: center;
+            align-items: center;
             .footer__image{
                 position: absolute;
-                left: 225px;
-                top: -290px;
+                top:10%;
+                left: 55%;
+                transform: translate(-50%, -50%);
                 img{
-                    width: 80%;
+                    width: 70%;
                 }
             }
             .footer__text{
-                   margin: 0; 
+                   margin-top: 15rem; 
                 h1{
                     color: #5537D3;
                     span{
@@ -40,15 +43,12 @@
         }
         }
         .second__section{
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            padding: 3rem 0;
-            margin: 3rem 0;
+           
             h1{
                 color: #5537D3;
                 font-size: 2.5rem;
-                margin: 0 6rem;
+                margin: 0 6rem 1rem 6rem;
+                text-align: center;
             }
             .footer__links{
                 display: flex;
@@ -73,22 +73,33 @@
         background: url("../../assets/footer-bg.svg") no-repeat top center/cover;
         .footer__container{
             .first__section{
+                flex-direction: row;
                 justify-content: space-evenly;
                 align-items: flex-end;
                 margin-top: 10rem;
-                margin-bottom: 10rem;
+                margin-bottom: 5rem;
                 .footer__image{
-                    position: absolute;
-                    left: 12px;
-                    top: -290px;
+                    left: 145px !important;
+                    top: -25px !important;
+                    img{
+                        width: 80%;
+                    }
                 }
                 .footer__text{
                     padding: 0 4rem;
-                    margin-left: 17rem;  
+                    margin-left: 17rem;
+                    margin-top: 0;  
                 }
                 .footer__appstore__logo{
-                    flex-direction: row;
+                    flex-direction: column;
                 }
+            }
+            .second__section{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                padding: 3rem 0;
+                margin: 3rem 0;
             }
         }
     }
