--- a/src/stylesheets/home/__navbar.scss
+++ b/src/stylesheets/home/__navbar.scss
@@ -28,7 +28,7 @@
         }
         button{
             background-color: white !important;
-            color: black !important;
+            color: #9A52DF!important;
             padding: 0.5rem 1rem;
             box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.13);
             &:hover{
