feat: added form component

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -9,4 +9,5 @@
 @import "./home/__partners.scss";  
 @import "./home/__footer.scss";  
 @import "./home/__photogrid.scss";  
-@import "./home/_description.scss";  
+@import "./home/__description.scss";  
+@import "./home/__form.scss";  
