--- a/src/stylesheets/home/__form.scss
+++ b/src/stylesheets/home/__form.scss
@@ -6,6 +6,9 @@
     box-shadow: 0px 4px 27px rgba(0, 0, 0, 0.1);
     font-weight: bold;
     width: 450px;
+    position: absolute;
+    right: 63px;
+    bottom: 12px;
     p{
         color: #605f6c;
     }
