--- a/src/stylesheets/home/__photogrid.scss
+++ b/src/stylesheets/home/__photogrid.scss
@@ -1,38 +1,53 @@
-.photo__grid{
-   margin-top: 10rem !important;
-   margin-bottom: 10rem !important;
-    .photo__grid__container{
-        .photo__grid__system{
-            display: grid;
-            row-gap: 20px;
-            column-gap: 20px;
-             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            //  grid-template-columns: 1fr 1fr 1fr 1fr;
-             grid-template-areas: 
-                "pic2 pic1 pic1 pic4"
-                "pic3 pic1 pic1 pic5"
-             ;
-             .pic1{
-                grid-area: pic1;
-                justify-self: center;
-             }
-             .pic2{
-                grid-area: pic2;
-                justify-self: center;
-             }
-             .pic3{
-                grid-area: pic3;
-                justify-self: center;
-             }
-             .pic4{
-                grid-area: pic4;
-                justify-self: center;
-             }
-             .pic5{
-                grid-area: pic5;
-                justify-self: center;
-             }
-        }
-    }
+.phot__grid{
+   .photo__grid__container{
+      .photo__grid__system{
+         display: flex;
+         flex-direction: column;
+         .pic1, .pic2, .pic3, .pic4, .pic5{
+            width: 50%;
+          }
+      }
+   }
 }
 
+
+
+@include respond(largeScreen){
+   .photo__grid{
+      margin-top: 10rem !important;
+      margin-bottom: 10rem !important;
+       .photo__grid__container{
+           .photo__grid__system{
+               display: grid;
+               row-gap: 20px;
+               column-gap: 20px;
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+               //  grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-areas: 
+                   "pic2 pic1 pic1 pic4"
+                   "pic3 pic1 pic1 pic5"
+                ;
+                .pic1{
+                   grid-area: pic1;
+                   justify-self: center;
+                }
+                .pic2{
+                   grid-area: pic2;
+                   justify-self: center;
+                }
+                .pic3{
+                   grid-area: pic3;
+                   justify-self: center;
+                }
+                .pic4{
+                   grid-area: pic4;
+                   justify-self: center;
+                }
+                .pic5{
+                   grid-area: pic5;
+                   justify-self: center;
+                }
+           }
+       }
+   }
+}
